Add profile and template selection to schedules (#8)
